fixed overflow when scaling up

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,12 +1,12 @@
 body {
-    margin: 0px;
+    margin: 2.5%;
     padding: 0px;
     background-color: black;
 }
 
 #image-index {
     float: left;
-    width: 33.33%;
+    width: 100%;
     height: 100%;
     object-fit: cover;
 }
